# example_pkg

./: .gitignore  README.rst  backup.mkgendocs.yml.backup  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: check_formatting.yml  check_linting.yml  docs.yml  tests.yml
docs/: README.md  about.md  example_pkg.asd.rst  example_pkg.rst
docs/source/: conf.py  index.rst
example_pkg/: __init__.py  kek.py  plp.py  qwt.py
tests/: __init__.py  test_example_pkg.py  test_test.py
