[tool.poetry]
name = "example_pkg"
version = "0.1.0"
description = ""
authors = ["John15321 <janbronicki@gmail.com>"]

[tool.poetry.dependencies]
# TODO: make it work for 3.7.x (sphinx - flake8 fuck up)
python = ">=3.7, <3.10"

[tool.poetry.dev-dependencies]
# TODO: make it work with already ready mateiral configuration


# sphinx-quickstart docs
# sphinx-quickstart docs --sep --project example_pkg -v 0.1.0 -r 0.1.0 -l en --ext-autodoc --ext-doctest --ext-coverage --ext-githubpages --makefile --batchfile --author "Jan Bronicki <janbronicki@gmail.com>"

Sphinx = "*"
sphinx-rtd-theme = "^1.0.0"
isort = "^5.10.1"
tox = "^3.24.5"
black = "^22.1.0"
pylint = "^2.12.2"
flake8 = "*"
toml = "^0.10.2"
pytest = "^7.0.1"

# sphinx-build -b html docs/source/ docs/build/html
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Good install command
# poetry add --dev sphinx="*" sphinx-rtd-theme isort tox black pylint flake8="*" pytest
